--- a/01ActivitesIntents/app/src/main/AndroidManifest.xml
+++ b/01ActivitesIntents/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.luhan.cc1_noite">
+    package="com.example.luhan.a01activitesintents">
 
     <application
         android:allowBackup="true"
@@ -9,18 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".PrimeiroActivity"
-            android:label="@string/title_activity_primeiro"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity android:name=".TesteActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".FormStudentActivity"
+            android:label="@string/title_activity_form_student"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.luhan.a01activitesintents.MainActivity" />
         </activity>
     </application>
 
